# oreilly_edd_course

./: README.md  pyproject.toml
src/oreilly_edd_course/: __init__.py  evals.py  evals_solution.py  main.py  main_solution.py  transcript1.txt  transcript2.txt  transcript3.txt
